corpus/cpp/overload/case-02/snapshots/gcc15/dual_sink_structured/render.default.txt
error: [type_mismatch] invalid conversion from 'const char*' to 'int' @ src/main.cpp:3:49
raw : invalid conversion from 'const char*' to 'int'
| src/main.cpp:3:49
| int main() { const char *value = "x"; takes_int(value); }
|                                                 ^

note: [unknown] initializing argument 1 of 'void takes_int(int)' @ src/main.cpp:1:16
note: wrapper confidence is low; verify against the preserved raw diagnostics
raw : initializing argument 1 of 'void takes_int(int)'
| src/main.cpp:1:16
| void takes_int(int);
|                ^